<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_login" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_password"
        android:password="true" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_password_confirm"
        android:password="true" />

    <EditText
        android:id="@+id/editTextZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editZipCode" />

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type" />

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/editTextNeighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/neighborhood" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/editTextState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state" />

    <Button
        android:id="@+id/buttonUserRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_register" />

</LinearLayout>